--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">BLESample</string>
     <string name="start_scanning">Start Scanning</string>
+    <string name="start_scanning_filter">Start Filtered Scanning </string>
+    <string name="stop_scanning_filter">Stop Filtered Scanning</string>
     <string name="stop_scanning">Stop Scanning</string>
     <string name="ble_scanner">BLE Scanner</string>
 </resources>
